--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextGenTech</title>
-    <link rel="stylesheet" href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/stylesheet1.css">
+    <link rel="stylesheet" href="file:stylesheet1.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
