--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextGenTech</title>
-    <link rel="stylesheet" href="stylesheet1.css">
     <link rel="stylesheet" href="file:NextTech.github.io/stylesheet1.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +11,7 @@
     <!-- navbar section -->
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="file:NextTech.github.io/index.html" id="navbar_logo">NEXT Gen Tech</a>
+            <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" id="navbar_logo">NEXT Gen Tech</a>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -20,16 +19,16 @@
             </div>
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="file:NextTech.github.io/index.html" class="navbar_links">Home </a>
+                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" class="navbar_links">Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="file:NextTech.github.io/tech.html"class="navbar_links">Tech </a>
+                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/tech.html"class="navbar_links">Tech </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="file:NextTech.github.io/products.html" class="navbar_links">Products </a>
+                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/products.html" class="navbar_links">Products </a>
                 </li>
                 <li class="navbar_btn">
-                    <a href="file:NextTech.github.io/index.html" class="button">Sign Up </a>
+                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" class="button">Sign Up </a>
                 </li>
             </ul>
         </div>
@@ -42,7 +41,7 @@
                 <h1>NEXT GENERATION</h1>
                 <h2>TECHNOLOGY</h2>
                 <p>See what makes us different.</p>
-                <button class="main_btn"><a href="file:NextTech.github.io/index.html">Get Started</a></button>
+                <button class="main_btn"><a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
                 <img src="images/pic1.svg" alt="pic" id="main_img">
@@ -106,7 +105,7 @@
         <div class="social_media">
             <div class="social_media-wrap">
                 <div class="footer_logo">
-                    <a href="file:NextTech.github.io/index.html" id="footer_logo"><i class="fasfaa-gem"></i>NEXT</a>
+                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" id="footer_logo"><i class="fasfaa-gem"></i>NEXT</a>
                 </div>
                 <p class="website_right">NEXT 2023. All rights reserved</p>
                 <div class="social_icons">
@@ -130,6 +129,6 @@
         </div>
     </div>
 
-    <script src="file:NextTech.github.io/app.js"> </script>
+    <script src="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/app.js"> </script>
 </body>
 </html>
