unupdatetech index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" class="navbar_links">Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="NextTech/tech.html"class="navbar_links">Tech </a>
+                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/tech.html"class="navbar_links">Tech </a>
                 </li>
                 <li class="navbar_item">
                     <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/products.html" class="navbar_links">Products </a>
