--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- navbar section -->
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" id="navbar_logo">NEXTGenTech</a>
+            <a href="/NextTech/index.html" id="navbar_logo">NEXTGenTech</a>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -19,10 +19,10 @@
             </div>
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" class="navbar_links">Home </a>
+                    <a href="/NextTech/index.html" class="navbar_links">Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/tech.html"class="navbar_links">Tech </a>
+                    <a href="/NextTech/tech.html"class="navbar_links">Tech </a>
                 </li>
                 <li class="navbar_item">
                     <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/products.html" class="navbar_links">Products </a>
