Update25 index.html

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <a href="/NextTech/tech.html"class="navbar_links">Tech </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/products.html" class="navbar_links">Products </a>
+                    <a href="/NextTech/products.html" class="navbar_links">Products </a>
                 </li>
                 <li class="navbar_btn">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" class="button">Sign Up </a>
+                    <a href="/NextTech/index.html" class="button">Sign Up </a>
                 </li>
             </ul>
         </div>
@@ -41,7 +41,7 @@
                 <h1>NEXT GENERATION</h1>
                 <h2>TECHNOLOGY</h2>
                 <p>See what makes us different.</p>
-                <button class="main_btn"><a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html">Get Started</a></button>
+                <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
                 <img src="images/pic1.svg" alt="pic" id="main_img">
@@ -105,7 +105,7 @@
         <div class="social_media">
             <div class="social_media-wrap">
                 <div class="footer_logo">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" id="footer_logo"><i class="fasfaa-gem"></i>NEXT</a>
+                    <a href="/NextTech/index.html" id="footer_logo"><i class="fasfaa-gem"></i>NEXT</a>
                 </div>
                 <p class="website_right">NEXT 2023. All rights reserved</p>
                 <div class="social_icons">
@@ -129,6 +129,6 @@
         </div>
     </div>
 
-    <script src="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/app.js"> </script>
+    <script src="/NextTech/app.js"> </script>
 </body>
 </html>
