--- a/tech.html
+++ b/tech.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextGenTech/Tech</title>
-    <link rel="stylesheet" href="file:stylesheet1.css">
+    <link rel="stylesheet" href="/NextTech/stylesheet1.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- navbar section -->
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" id="navbar_logo">NEXT Gen Tech</a>
+            <a href="/NextTech/index.html" id="navbar_logo">NEXT Gen Tech</a>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -19,16 +19,16 @@
             </div>
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" class="navbar_links">Home </a>
+                    <a href="/NextTech/index.html" class="navbar_links">Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/tech.html" class="navbar_links">Tech </a>
+                    <a href="/NextTech/tech.html" class="navbar_links">Tech </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/products.html" class="navbar_links">Products </a>
+                    <a href="/NextTech/products.html" class="navbar_links">Products </a>
                 </li>
                 <li class="navbar_btn">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" class="button">Sign Up </a>
+                    <a href="/NextTech/index.html" class="button">Sign Up </a>
                 </li>
             </ul>
         </div>
@@ -41,7 +41,7 @@
                 <h1>Introducing High</h1>
                 <h2>Quality Tech</h2>
                 <p>That will change your life.</p>
-                <button class="main_btn"><a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html">Get Started</a></button>
+                <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
                 <img src="images/pic2.svg" alt="pic" id="main_img">
@@ -105,7 +105,7 @@
         <div class="social_media">
             <div class="social_media-wrap">
                 <div class="footer_logo">
-                    <a href="file:///C:/Users/ryan/OneDrive/Desktop/coding/Web_surfur/index.html" id="footer_logo"><i class="fasfaa-gem"></i>NEXT</a>
+                    <a href="/NextTech/index.html" id="footer_logo"><i class="fasfaa-gem"></i>NEXT</a>
                 </div>
                 <p class="website_right">NEXT 2023. All rights reserved</p>
                 <div class="social_icons">
@@ -129,6 +129,6 @@
         </div>
     </div>
 
-    <script src="app.js"> </script>
+    <script src="/NextTech/app.js"> </script>
 </body>
 </html>
