--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
-                <img src="images/pic1.svg" alt="pic" id="main_img">
+                <img src="/NextTech/pic1.svg" alt="pic" id="main_img">
             </div>
         </div>
     </div>
