--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <a href="/NextTech/index.html" id="footer_logo"><i class="fasfaa-gem"></i>NEXT</a>
                 </div>
                 <p class="website_right">NEXT 2023. All rights reserved</p>
-                <div class="social_icons">
+               <!-- <div class="social_icons">
                     <a href="/" class="social_icon-link" target="_blank">
                         <i class="fab fa-facebook"></i>
                     </a>
@@ -124,7 +124,7 @@
                     <a href="/" class="social_icon-link" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
