--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NextGenTech/Products</title>
+    <title>NextGenTech/Cyber</title>
     <link rel="stylesheet" href="/NextTech/stylesheet1.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <!-- navbar section -->
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="/NextTech/index.html" id="navbar_logo">NEXTGenTech</a>
+            <a href="/NextTech/index.html" id="navbar_logo">NEXTGen Cyber</a>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -25,7 +25,7 @@
                     <a href="/NextTech/tech.html" class="navbar_links">Tech </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/NextTech/products.html" class="navbar_links">Products </a>
+                    <a href="/NextTech/products.html" class="navbar_links">Cyber </a>
                 </li>
                 <li class="navbar_btn">
                     <a href="/NextTech/index.html" class="button">Sign Up </a>
@@ -39,8 +39,8 @@
         <div class="main_container">
             <div class="main_content">
                 <h1>NEXT GENERATION</h1>
-                <h2>Products</h2>
-                <p>Check out our Newest Inventory Below.</p>
+                <h2>Cyber Security</h2>
+                <p>The best in ethical hacking.</p>
                 <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
