--- a/tech.html
+++ b/tech.html
@@ -11,7 +11,7 @@
     <!-- navbar section -->
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="/NextTech/index.html" id="navbar_logo">NEXTGenTech</a>
+            <a href="/NextTech/index.html" id="navbar_logo">NEXTGen Tech</a>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -25,7 +25,7 @@
                     <a href="/NextTech/tech.html" class="navbar_links">Tech </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/NextTech/products.html" class="navbar_links">Products </a>
+                    <a href="/NextTech/products.html" class="navbar_links">Cyber </a>
                 </li>
                 <li class="navbar_btn">
                     <a href="/NextTech/index.html" class="button">Sign Up </a>
@@ -38,13 +38,13 @@
     <div class="main">
         <div class="main_container">
             <div class="main_content">
-                <h1>Introducing High</h1>
-                <h2>Quality Tech</h2>
-                <p>That will change your life.</p>
+                <h1>The Newest</h1>
+                <h2>High Quality Tech</h2>
+                <p>To protect your online life.</p>
                 <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
-                <img src="/NextTech/pic2.svg" alt="pic" id="main_img">
+                <img src="/NextTech/pic3.svg" alt="pic" id="main_img">
             </div>
         </div>
     </div>
