--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- navbar section -->
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="/NextTech/index.html" id="navbar_logo">NEXTGenTech</a>
+            <a href="/NextTech/index.html" id="navbar_logo">NEXT</a>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -25,7 +25,7 @@
                     <a href="/NextTech/tech.html"class="navbar_links">Tech </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/NextTech/products.html" class="navbar_links">Products </a>
+                    <a href="/NextTech/products.html" class="navbar_links">Cyber </a>
                 </li>
                 <li class="navbar_btn">
                     <a href="/NextTech/index.html" class="button">Sign Up </a>
@@ -39,7 +39,7 @@
         <div class="main_container">
             <div class="main_content">
                 <h1>NEXT GENERATION</h1>
-                <h2>TECHNOLOGY</h2>
+                <h2>TECHNOLOGY AND ETHICAL HACKING</h2>
                 <p>See what makes us different.</p>
                 <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
@@ -51,17 +51,17 @@
 
     <!--Services section-->
     <div class="services">
-        <h1>See what the hype is about</h1>
+        <h1>See what we can do for you</h1>
         <div class="services_container">
             <div class="services_card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
+                <h2>Software Protection?</h2>
+                <p>Check Out Ethical Hacking</p>
                 <button>Get Started</button>
             </div>
             <div class="services_card">
-                <h2>Are you Ready?</h2>
-                <p>Take the Leap</p>
-                <button>Get Started</button>
+                <h2>Need New Hardware?</h2>
+                <p>Check Out The Recommended Products</p>
+                <button>Products</button>
             </div>
         </div>
     </div>
