--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
             <div class="main_content">
                 <h1>NEXT</h1>
                 <h2>Cyber Security</h2>
-                <p>The best in ethical hacking.</p>
+                <p>THE BEST IN ETHICAL HACKING.</p>
                 <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
