--- a/tech.html
+++ b/tech.html
@@ -40,7 +40,7 @@
             <div class="main_content">
                 <h1>The Newest</h1>
                 <h2>High Quality Tech</h2>
-                <p>To protect your online life.</p>
+                <p>TO PROTECT YOUR ONLINE LIFE</p>
                 <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
