--- a/tech.html
+++ b/tech.html
@@ -38,9 +38,9 @@
     <div class="main">
         <div class="main_container">
             <div class="main_content">
-                <h1>The Newest</h1>
-                <h2>High Quality Tech</h2>
-                <p>TO PROTECT YOUR ONLINE LIFE</p>
+                <h1>THE NEWEST</h1>
+                <h2>HIGH QUALITY TECH</h2>
+                <p>To protect your online life</p>
                 <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
