--- a/products.html
+++ b/products.html
@@ -39,8 +39,8 @@
         <div class="main_container">
             <div class="main_content">
                 <h1>NEXT</h1>
-                <h2>Cyber Security</h2>
-                <p>THE BEST IN ETHICAL HACKING.</p>
+                <h2>CYBER SECURITY</h2>
+                <p>The best in ethical hacking.</p>
                 <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
