--- a/tech.html
+++ b/tech.html
@@ -11,7 +11,7 @@
     <!-- navbar section -->
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="/NextTech/index.html" id="navbar_logo">NEXTGen Tech</a>
+            <a href="/NextTech/index.html" id="navbar_logo">NEXT Tech</a>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
