--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             <div class="services_card">
                 <h2>Software Protection?</h2>
                 <p>Check Out Ethical Hacking</p>
-                <button>Get Started</button>
+                <button><a href="/NextTech/products.html">Get Started</a></button>
             </div>
             <div class="services_card">
                 <h2>Need New Hardware?</h2>
                 <p>Check Out The Recommended Products</p>
-                <button>Products</button>
+                <button><a href="/NextTech/tech.html">Products</a></button>
             </div>
         </div>
     </div>
