--- a/tech.html
+++ b/tech.html
@@ -51,17 +51,17 @@
 
     <!--Services section-->
     <div class="services">
-        <h1>See what the hype is about</h1>
+        <h1>Check the latest products here</h1>
         <div class="services_container">
             <div class="services_card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
-                <button>Get Started</button>
+                <h2>Need New Software?</h2>
+                <p>Check Out The Top Recommendations</p>
+                <button>Browse Software</button>
             </div>
             <div class="services_card">
-                <h2>Are you Ready?</h2>
-                <p>Take the Leap</p>
-                <button>Get Started</button>
+                <h2>Looking For Hardware?</h2>
+                <p>Take A Look at These Top Sellers</p>
+                <button>Browse Hardware</button>
             </div>
         </div>
     </div>
