--- a/tech.html
+++ b/tech.html
@@ -40,7 +40,7 @@
             <div class="main_content">
                 <h1>THE NEWEST</h1>
                 <h2>HIGH QUALITY TECH</h2>
-                <p>To protect your online life.</p>
+                <p>To enhance your online life.</p>
                 <button class="main_btn"><a href="/NextTech/index.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
@@ -51,7 +51,7 @@
 
     <!--Services section-->
     <div class="services">
-        <h1>Check the latest products here</h1>
+        <h1>Check out the latest products here</h1>
         <div class="services_container">
             <div class="services_card">
                 <h2>Need New Software?</h2>
